--- a/package.json
+++ b/package.json
@@ -7,13 +7,27 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "config": "^3.3.3",
     "drei": "^2.2.17",
+    "firebase": "^8.2.5",
+    "history": "^5.0.0",
+    "nice-color-palettes": "^3.0.0",
+    "pannellum-react": "^1.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hooks-helper": "^1.6.0",
+    "react-multistep": "^5.1.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-three-fiber": "^5.3.14",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "three": "^0.124.0",
     "three-obj-mtl-loader": "^1.0.3",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -39,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0"
   }
 }
