--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "@react-spring/core": "^9.0.0-rc.3",
+    "@react-spring/three": "^9.0.0-rc.3",
     "@react-three/drei": "^2.2.18",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "config": "^3.3.3",
     "drei": "^2.2.17",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.2.5",
+    "graphql": "^15.5.0",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "nice-color-palettes": "^3.0.0",
     "pannellum-react": "^1.2.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hooks-helper": "^1.6.0",
@@ -21,13 +29,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-three-fiber": "^5.3.14",
+    "react-use-gesture": "^9.0.4",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "three": "^0.124.0",
     "three-obj-mtl-loader": "^1.0.3",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
